node-main/deps/v8/test/message/fail/strict-prior-octal-escape.js
// Copyright 2022 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

function foo() {
    "use strict";
    "\123";
    abc 1;
}
